--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ google_analytics: UA-101222464-1
 share:            true 
 # 分页
 paginate: 5
-paginate_path: "liberxuepage:num"
+paginate_path: "pageNum:num"
 gems: [jekyll-paginate]
 links:
   - name:         首页
