--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ signoff:          "Saras" # Your name
 facebook_appid:   #facebook_id
 google_analytics: UA-101222464-1
 share:            true 
+logopic: logo_saras_01.jpg
 # 分页
 paginate: 6
 paginate_path: "pageNum:num"
