--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ links:
   - name:         技术
     url:          /technology
     external:     false
-  - name:         游戏
-    url:          /game
+  - name:         生活
+    url:          /life
     external:     false
   - name:         游记
     url:          /road
